# PetHotel

./: .gitignore  Animal.cpp  Animal.h  CMakeLists.txt  Dog.cpp  Dog.h  IDManager.cpp  IDManager.h  Kennel.cpp  Kennel.h  OldCode.txt  PetHotel.cpp  PetHotel.h  README.md  Reservation.cpp  Reservation.h  main.cpp
Animals/: AnimalFilter.cpp  AnimalFilter.h  Cat.cpp  Cat.h  Dog.cpp  Dog.h  Rodent.cpp  Rodent.h
Files/: Animals.csv  AnimalsFH.cpp  AnimalsFH.h  BookingDB.csv  BookingFH.cpp  BookingFH.h  FileHandler.cpp  FileHandler.h  Kennels.csv  KennelsFH.cpp  KennelsFH.h  MetadataID.txt  Reservations.csv  ReservationsFH.cpp  ReservationsFH.h
Logic/: Booking.cpp  Booking.h  BookingEntry.cpp  BookingEntry.h  Date.cpp  Date.h  DatePeriod.cpp  DatePeriod.h
